--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://tecnologia.tole.es"
-title = "Últimas ofertas"
+title = "Últimas ofertas en tecnología"
 theme = "portfolio"
 languageCode = "es-es"
 # Enable comments by entering your Disqus shortname
